--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image" href="./src/images/Favion.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Saeed Portfolio</title>
+    <meta name="description" content="Hi,ImSaeed.WebDeveloperIm a Web Developer mainly Focused onFrontend (JavaScript)" />
+    <title>Saeed portfolio</title>
   </head>
   <body>
     <div id="root"></div>
